changing email and resume

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
     <h2 id="contactheader">Have a question or just want to say hi? </h2>
     <h2 id="contactheader">Contact me here. I would love to hear from you!</h2>
     <div class="photos">
-      <a href="mailto:christine.nguyen0909@gmail.com">
+      <a href="mailto:cnguyen.swe@gmail.com">
         <img src="mail.png" height="75" width="auto">
         <p class ="contactdesc">Email</p>
       </a>
-      <a href="https://drive.google.com/file/d/1ODFqfM9EMUmMR4_9pUuRp84HSnk4i44_/view?usp=sharing">
+      <a href="https://drive.google.com/file/d/1Rz4n7SeU3auuUY4TVzFUOMFoJ1OIKQV5/view?usp=sharing">
         <img src="resume.png" height="75" width="auto">
         <p class ="contactdesc">Resume</p>
       </a>
