--- a/index.html
+++ b/index.html
@@ -120,6 +120,20 @@
     </div>
     <hr class = "projectdiv2">
     <div class="project2">
+      <h2>Discord Server Bot</h2>
+      <img src="discordbot.png" class="projectimg">
+      <p class="projectdesc">
+        Created Pocki, a Python-based Discord bot that streams YouTube audio using discord.py, FFmpeg, and yt-dlp.
+        Designed real-time commands like $hello, $play, $pause, and $skip to enhance interactivity.
+        Implemented API integration, asynchronous programming, and clean bot design principles for smooth and reliable performance.
+      </p>
+      <div class="buttons">
+            <a class="left" href="https://github.com/christinne-n/discordbot">GitHub</a>
+            <a class="right" href="https://drive.google.com/file/d/14SQgVsIAoc3V0HoBXp7pw9yjfpmVZQdY/view?usp=sharing">Video Demo</a>
+      </div>
+    </div>
+    <hr class = "projectdiv2">
+    <div class="project2">
       <h2>Rock, Paper, Scissors Game</h2>
       <img src="rps.png" class="projectimg">
       <p class="projectdesc">
@@ -173,7 +187,7 @@
         <img src="resume.png" height="75" width="auto">
         <p class ="contactdesc">Resume</p>
       </a>
-      <a href="https://www.linkedin.com/in/christinne-nguyenn/">
+      <a href="www.linkedin.com/in/christinelnguyen">
         <img src="linkedin.png" height="75" width="auto">
         <p class ="contactdesc">LinkedIn</p>
       </a>
