editing skills and updating resume

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back frontend-back">
-              <p>HTML</p>
-              <p>CSS</p>
-              <p>JavaScript</p>
+              <p>HTML, CSS, Vite</p>
+              <p>Tailwind CSS</p>
+              <p>JavaScript, React</p>
             </div>
           </div>
         </div>
@@ -67,9 +67,9 @@
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back design-back">
-              <p>Git, GitHub, UNIX</p>
-              <p>Figma, WCAG, Vite</p>
-              <p>UI/UX Design</p>
+              <p>Git, GitHub</p>
+              <p>Figma, UNIX</p>
+              <p>CI/CD</p>
             </div>
           </div>
         </div>
@@ -80,21 +80,8 @@
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back backend-back">
-              <p>C/C++, Java</p>
-              <p>Python, SQL</p>
-            </div>
-          </div>
-        </div>
-        <div class="skill-card" role="button" tabindex="0" aria-expanded="false" aria-label="Frontend card">
-          <div class="card-inner">
-            <div class="card-face front framework">
-              <p class ="skillstitle">Frameworks & Libraries</p>
-              <div class="smalltext">Click or tap to flip</div>
-            </div>
-            <div class="card-face back framework-back">
-              <p>React.js</p>
-              <p>Node.js</p>
-              <p>Tailwind CSS</p>
+              <p>Python, Java</p>
+              <p>C/C++, SQL, NodeJS</p>
             </div>
           </div>
         </div>
@@ -183,7 +170,7 @@
         <img src="mail.png" height="75" width="auto">
         <p class ="contactdesc">Email</p>
       </a>
-      <a href="https://drive.google.com/file/d/1Rz4n7SeU3auuUY4TVzFUOMFoJ1OIKQV5/view?usp=sharing">
+      <a href="https://drive.google.com/file/d/14aXjoVYYXactohl06hbSsK4nw_WIc8fP/view?usp=sharing">
         <img src="resume.png" height="75" width="auto">
         <p class ="contactdesc">Resume</p>
       </a>
